--- a/my-notes/src/styles.css
+++ b/my-notes/src/styles.css
@@ -68,3 +68,22 @@ textarea:focus {
 .delete-icon {
   cursor: pointer;
 }
+
+.search {
+  display: flex;
+  align-items: center;
+  background-color: rgb(233, 233, 233);
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 1.5em;
+}
+
+.search input {
+  border: none;
+  margin-left: 5px;
+  background-color: rgb(233, 233, 233);
+}
+
+.search input:focus {
+  outline: none;
+}
